deploy/app/pickle.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pickle
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: pickle
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30088
  selector:
    app: web-svc
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: words-svc
  namespace: pickle
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 9090
  selector:
    app: words-svc
---
apiVersion: v1
kind: Service
metadata:
  name: signing-svc
  namespace: pickle
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 9090
  selector:
    app: signing-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: pickle
    app.kubernetes.io/version: v11
  name: web
  namespace: pickle
  annotations:
    config.linkerd.io/trace-collector: collector.linkerd-jaeger:55678
    config.alpha.linkerd.io/trace-collector-service-account: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc
      version: v11
  template:
    metadata:
      labels:
        app: web-svc
        version: v11
    spec:
      containers:
      - image: pickle:local
        name: web-svc
        ports:
        - containerPort: 80
          name: http
      serviceAccountName: weber
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: words
    app.kubernetes.io/part-of: pickle
    app.kubernetes.io/version: v11
  name: words
  namespace: pickle
  annotations:
    config.linkerd.io/trace-collector: collector.linkerd-jaeger:55678
    config.alpha.linkerd.io/trace-collector-service-account: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words-svc
      version: v11
  template:
    metadata:
      labels:
        app: words-svc
        version: v11
    spec:
      containers:
      - image: pickle_words:local
        name: words-svc
        ports:
        - containerPort: 9090
          name: grpc
      serviceAccountName: worder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: signing
    app.kubernetes.io/part-of: pickle
    app.kubernetes.io/version: v11
  name: signing
  namespace: pickle
  annotations:
    config.linkerd.io/trace-collector: collector.linkerd-jaeger:55678
    config.alpha.linkerd.io/trace-collector-service-account: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signing-svc
      version: v11
  template:
    metadata:
      labels:
        app: signing-svc
        version: v11
    spec:
      containers:
      - image: pickle_signer:local
        name: signing-svc
      serviceAccountName: signer
